# s3contents

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .isort.cfg  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  DEV.md  DEVELOP.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  Taskfile.yml  codecov.yml  environment.yml  jupyter_notebook_config.py  justfile  pyproject.toml  requirements-dev.txt  requirements-package.txt  requirements.package.txt  requirements.txt  setup.cfg  setup.py
.ci/: install_go.sh  install_python.sh  start_minio.sh
.github/workflows/: main.yml  test.yml  tests.yml
ci/: install_python.sh  start_minio.sh
requirements/: linting.txt  pyproject.txt
s3contents/: __about__.py  __init__.py  _version.py  basefs.py  chunks.py  compat.py  gcs_fs.py  gcsmanager.py  genericfs.py  genericmanager.py  ipycompat.py  s3_fs.py  s3fs.py  s3manager.py  storefact_fs.py  storefactmanager.py
s3contents/gcs/: __init__.py  gcs_fs.py  gcsmanager.py
s3contents/tests/: hooks.py  test_gcsmanager.py  test_gcsmanager_chunked.py  test_gcsmanager_prefix.py  test_gcsmanager_with_prefix.py  test_import.py  test_pkg.py  test_s3manager.py  test_s3manager_chunked.py  test_s3manager_prefix.py  test_s3manager_with_prefix.py  test_storefactmanager.py  test_storefactmanager_prefix.py  utils.py
s3contents/tests/gcs/: test_gcsmanager.py  test_gcsmanager_chunked.py  test_gcsmanager_with_prefix.py
