[tool.poetry]
name = "s3contents"
version = "0.9.0"
packages = [{ include = "s3contents" }]
homepage = "https://github.com/danielfrg/s3contents"
repository = "https://github.com/danielfrg/s3contents"
documentation = "https://github.com/danielfrg/s3contents"
description = "S3 Contents Manager for Jupyter"
authors = ["Daniel Rodriguez"]
maintainers = ["Daniel Rodriguez"]
license = "Apache License, Version 2.0"
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4"
notebook = ">=5.6,<7.0"
aiobotocore = {version = "^1.4.0", extras = ["boto3"]}
s3fs = ">=2021.11.0"
gcsfs = {version = "^2021.11.0", optional = true}

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
black = "^21.8b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
pylint = "^2.10.2"
twine = "^3.4.2"
jupyterlab = "^3.2.4"

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
coverage = {version = "^6.1.2", extras = ["toml"]}
mock = "^4.0.3"
nose = "^1.3.7"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"

[tool.poetry.extras]
gcs = ["gcsfs"]

[tool.pytest.ini_options]
testpaths = ["s3contents/tests"]
addopts = [
  "-s", "-vv",
  "--ignore=dist",
  "--ignore=site-packages",
  # "--strict-markers",
  "--cov=s3contents",
  "--cov-report=term",
  "--cov-config=pyproject.toml"
]
xfail_strict = true
markers = [
    "pkg: package tests",
    "minio: requires minio server (deselect with '-m \"not minio\"')",
    "gcs: requires gcs creds (deselect with '-m \"not minio\"')"
]

[tool.coverage.report]
show_missing = true
ignore_errors = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError"
]
omit = ["s3contents/tests/*", "s3contents/gcs/*"]

[tool.coverage.paths]
source = [
    "s3contents",
    ".venv/lib/python*/site-packages/s3contents",
]

[tool.black]
line_length = 79
skip_string_normalization = true

[tool.isort]
ensure_newline_before_comments = true
line_length = 79
multi_line_output = 3
include_trailing_comma = true
profile = "black"

[tool.pydocstyle]
add_ignore = ["D100", "D101", "D102", "D103", "D104", "D105"]
convention = "numpy"
inherit = false
match_dir = "s3contents"

[tool.poetry-version-plugin]
source = "init"

[build-system]
requires = ["poetry>=1.2.0a2", "setuptools>=57,<58"]
build-backend = "poetry.masonry.api"
